style weekday selector

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -481,3 +481,10 @@ table td {
   margin-bottom:5px;
   width: 200px;
 }
+
+.weekday-selector{
+  width: 5%;
+  margin-left: 20%;
+  white-space: nowrap;
+}
+
