--- a/app/views/calendars/_calendar.html.erb
+++ b/app/views/calendars/_calendar.html.erb
@@ -13,7 +13,7 @@
 
   <p>
     <strong>Creator:</strong>
-     <%=  User.find_by(id: calendar.user_id).first_name + " " + User.find_by(id: calendar.user_id).last_name %>
+     <%=  User.find_by(id: calendar.user_id).full_name%>
   </p>
 
   <p>
