--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="input-group input-group-sm mb-3">
-    <%= form.submit "Create", class:"btn btn-sm btn-primary" %>
+    <%= form.submit :Create, class:"btn btn-sm btn-primary" %>
   </div>
 <div>
 <% end %>
