--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,18 +13,8 @@
     <% end %>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.label :first_name, style: "display: block" %>
-      <%= form.text_field :first_name %>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
-      <%= form.label :last_name, style: "display: block" %>
-      <%= form.text_field :last_name %>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
-      <%= form.label :student_id, style: "display: block" %>
-      <%= form.number_field :student_id %>
+      <%= form.label :full_name, style: "display: block" %>
+      <%= form.text_field :full_name %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
