--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,17 +1,7 @@
 <div id="<%= dom_id user %>">
   <p>
-    <strong>First name:</strong>
-    <%= user.first_name %>
-  </p>
-
-  <p>
-    <strong>Last name:</strong>
-    <%= user.last_name %>
-  </p>
-
-  <p>
-    <strong>Student:</strong>
-    <%= user.student_id %>
+    <strong>Full name:</strong>
+    <%= user.full_name %>
   </p>
 
   <p>
