--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container event-box" align="center">
   <p style="color: green"><%= notice %></p>
-  <h1><%= "#{@user.first_name} #{@user.last_name}" %></h1>
+  <h1><%= "#{@user.full_name}" %></h1>
   <p><%= "#{@user.email}" %></p>
-  <div class="profile-pic">
+    <div class="profile-pic">
     <%= gravatar_for @user %>
   </div>
   
