--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -33,7 +33,7 @@
     </div>
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Submit, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
