--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -3,7 +3,7 @@
 <p style="color: green"><%= notice %></p>
 
 <div>
-  <p><%= @assignment.name %></p>
+  <h3><%= @assignment.name %></h3>
 </div>
 
 <div>
