--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -26,8 +26,8 @@
     <%= form.check_box :shared %>
   </div>
 
-  <div class="input-group input-group-sm mb-3">
-    <%= form.submit "Create", class:"btn btn-sm btn-primary" %>
+  <div class="input-group input-group-sm mb-3 delete-button">
+    <%= form.submit "Submit", class:"btn btn-sm btn-primary" %>
   </div>
 <div>
 <% end %>
