--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this calendar", @calendar %> |
-  <%= link_to "Back to Calendar View", home_calendar_path %>
+  <%= link_to "Show this calendar", @calendar , class:"btn btn-sm btn-primary" %> |
+  <%= link_to "Back to Calendar View", home_calendar_path, class:"btn btn-sm btn-primary" %>
 </div>
