--- a/app/views/home/calendar.html.erb
+++ b/app/views/home/calendar.html.erb
@@ -5,9 +5,9 @@
     </h1>
         <form class="datepicker-box" action="calendar", align="right">
             <h3>Select a Date</h3>
-            <input id="datepicker" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
+            <input id="datepicker" class="input-group input-group-sm mb-3" type="date" name="date" value=<% @day.currentDate %> min="2000-01-01" max="2100-12-31">
             <br>
-            <input class="btn btn-sm btn-primary" id="datepicker-submit" value="Find" type="submit"/>
+            <input class="btn btn-sm btn-primary" id="datepicker-submit" value="Find" type="submit"/>      
         </form>
 
     <div>
