--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -35,7 +35,12 @@
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :due_date, style: "display: block" %>
-      <%= form.datetime_field :due_date %>
+      <%= form.date_field :due_date %>
+    </div>
+
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :due_time, style: "display: block" %>
+      <%= form.time_field :due_time %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
