--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -12,6 +12,11 @@
 </div>
 
 <div>
+  <strong>Due Date</strong>
+  <p><%= @assignment.due_time.strftime("%I:%M%p") %></p>
+</div>
+
+<div>
   <%= link_to "Edit", edit_assignment_path(@assignment), class:"btn btn-sm btn-primary" %> |
   <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
 
