--- a/app/views/class_periods/_form.html.erb
+++ b/app/views/class_periods/_form.html.erb
@@ -14,17 +14,20 @@
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :course_id, style: "display: block" %>
-      <%= form.number_field :course_id %>
+      <%= form.select :calendar_id, CalendarHelper.load_courses(current_user[:id]), include_blank:true %>
     </div>
+
+    <%= link_to "Create a New Course", new_course_path %>
+    <br><br>
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :start_time, style: "display: block" %>
-      <%= form.datetime_field :start_time %>
+      <%= form.time_field :start_time %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :end_time, style: "display: block" %>
-      <%= form.datetime_field :end_time %>
+      <%= form.time_field :end_time %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
