--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <%= javascript_importmap_tags %>
 
   </head>
-  <body>
+  <body class=<%= @class %>>
     <%= render 'layouts/header' %>
     <div class="container main-template">
       <% flash.each do |message_type, message| %>
