--- a/app/views/other_events/show.html.erb
+++ b/app/views/other_events/show.html.erb
@@ -8,12 +8,12 @@
 
 <div>
   <strong>Start Time</strong>
-  <p><%= @other_event.start_time %></p>
+  <p><%= @other_event.start_time.strftime("%I:%M%p") %></p>
 </div>
 
 <div>
   <strong>End Time</strong>
-  <p><%= @other_event.end_time %></p>
+  <p><%= @other_event.end_time.strftime("%I:%M%p") %></p>
 </div>
 
 <div>
