--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -7,6 +7,11 @@ body {
     padding-top: 40px;
 }
 
+img {
+  max-width: 100%;
+  height: 25px;
+  width: auto\9; /* ie8 */
+}
 section {
 overflow: auto;
 }
@@ -192,6 +197,7 @@ input {
 
 .dropdown-menu.active {
     display: block;
+    position:absolute;
   }
 
 
