--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,21 +17,20 @@
           <li><%= link_to "Users", users_path %></li>
           <li class="dropdown">
             <a href="#" id="account" class="dropdown-toggle">
-              Account <b class="caret"></b>
+               Account <b class="caret"></b>
             </a>
             <ul id="dropdown-menu" class="dropdown-menu">
-              <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Calendars", calendars_url %></li>
+              <li align="center"><%= link_to "Profile", current_user %></li>
+              <li align="center"><%= link_to "Calendars", calendars_url %></li>
               <li class="divider"></li>
-              <li>
-                <%= link_to "Log out", logout_path,
-                                       data: { "turbo-method": :delete } %>
+              <li align="center">
+                <%= button_to "Log out", destroy_user_session_path, data: {turbo: "false"}, method: :delete %>
               </li>
             </ul>
           </li>
         <% else %>
           <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Log in", new_user_session_path %></li>
         <% end %>
       </ul>
     </nav>
