--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -12,11 +12,14 @@
 </div>
 
 <div>
-  <%= link_to "Edit", edit_assignment_path(@assignment), class:"btn btn-sm btn-primary" %> |
+  <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
+    <%= link_to "Edit", edit_assignment_path(@assignment), class:"btn btn-sm btn-primary" %> |
+  <% end %>
   <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
-
-  <div class="delete-button">
-    <%= button_to "Delete this assignment", @assignment, method: :delete, class:"btn btn-sm btn-primary" %>
-  </div>
+  <% if Calendar.find_by(id: @assignment.calendar_id).user_id == Current.user.id%>
+    <div class="delete-button">
+      <%= button_to "Delete this assignment", @assignment, method: :delete, class:"btn btn-sm btn-primary" %>
+    </div>
+  <% end %>
 </div>
 </div>
