--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -55,7 +55,7 @@
 
     <div class="form-group">
         <%= form.label :Meeting_Days %>
-
+        <div class = "weekday-selector">
           <%= form.check_box :repetition_frequency, { multiple: true }, 'M', false %>M
           <%= form.check_box :repetition_frequency, { multiple: true }, 'T', false %>T
           <%= form.check_box :repetition_frequency, { multiple: true }, 'W', false %>W
@@ -63,10 +63,11 @@
           <%= form.check_box :repetition_frequency, { multiple: true }, 'F', false %>F
           <%= form.check_box :repetition_frequency, { multiple: true }, 'S', false %>Sa
           <%= form.check_box :repetition_frequency, { multiple: true }, 'U', false %>Su
+        </div>  
     </div> 
 
     <div class="input-group input-group-sm mb-3">
-      <%= form.submit :Update, class:"btn btn-lg btn-primary" %>
+      <%= form.submit :Submit, class:"btn btn-lg btn-primary" %>
     </div>
   <% end %>
 </div>
