--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,36 @@
-<p style="color: green"><%= notice %></p>
+<h1>Course</h1>
+<div class="container event-box" align="center">
 
-<%= render @course %>
+  
+<div>
+  <h3><%= @course.name %></h3>
+</div>
 
 <div>
-  <%= link_to "Edit this course", edit_course_path(@course) %> |
-  <%= link_to "Back to courses", courses_path %>
+  <strong>Date</strong>
+  <p><%= @course.start_date.to_s + " to " + @course.end_date.to_s  %></p>
+</div>
 
-  <%= button_to "Destroy this course", @course, method: :delete %>
+<div>
+  <strong>Time</strong>
+  <p><%= @course.start_time.to_s + " to " + @course.end_time.to_s  %></p>
+</div>
+
+<div>
+  <strong>Repeat on</strong>
+  <p><%= @course.repetition_frequency %></p>
+</div>
+
+
+  <div>
+    <% if Calendar.find_by(id: @course.calendar_id).user_id == Current.user.id%>
+      <%= link_to "Edit", edit_course_path(@course),class:"btn btn-sm btn-primary" %> |
+    <% end %>
+      <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
+    <% if Calendar.find_by(id: @course.calendar_id).user_id == Current.user.id%>
+      <div class="delete-button">
+        <%= button_to "Delete this course", @course, method: :delete, class:"btn btn-sm btn-primary" %>
+      </div>
+    <%end%>
+  </div>
 </div>
