Input fields fixes (#47)
* Fixing names

* fixed times

Co-authored-by: Jiefang Li <88059544+jessieffff@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <%= javascript_importmap_tags %>
 
   </head>
-  <body>
+  <body class=<%= @class %>>
     <%= render 'layouts/header' %>
     <div class="container main-template flash_msgs">
       <% [:notice, :success,:danger, :alert].each do |level| %>
