--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -3,17 +3,17 @@
 
 
 <div>
-  <p><%= @class_period.name %></p>
+  <h1><%= @class_period.name %></h1>
 </div>
 
 <div>
   <strong>Start Time</strong>
-  <p><%= @class_period.start_time %></p>
+  <p><%= @class_period.start_time.strftime("%I:%M%p") %></p>
 </div>
 
 <div>
   <strong>End Time</strong>
-  <p><%= @class_period.end_time %></p>
+  <p><%= @class_period.end_time.strftime("%I:%M%p") %></p>
 </div>
 
 <div>
