--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -18,6 +18,9 @@
       <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
     </div>
 
+    <%= link_to "Create a New Calendar", new_calendar_path %>
+    <br><br>
+
     <div class="input-group input-group-sm mb-3">
       <%= form.label :name, style: "display: block" %>
       <%= form.text_field :name %>
@@ -41,11 +44,6 @@
     <div class="input-group input-group-sm mb-3">
       <%= form.label :end_time, style: "display: block" %>
       <%= form.time_field :end_time, value: "%I:%M%p"%>
-    </div>
-
-    <div class="input-group input-group-sm mb-3">
-      <%= form.label :location, style: "display: block" %>
-      <%= form.text_field :location %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
