--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -13,7 +13,7 @@
 
 <div>
   <strong>Time</strong>
-  <p><%= @course.start_time.to_s + " to " + @course.end_time.to_s  %></p>
+  <p><%= @course.start_time.strftime("%I:%M%p").to_s + " to " + @course.end_time.strftime("%I:%M%p").to_s %></p>
 </div>
 
 <div>
