--- a/app/views/holidays/edit.html.erb
+++ b/app/views/holidays/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing holiday</h1>
+<h1>Edit Holiday Information</h1>
 
 <div class="container event-box" align="center">
   <%= form_with(scope: :holiday, url: calendar_holiday_path(@holiday), method: :patch) do |form| %>
