--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -17,7 +17,7 @@
       <%= form.select :calendar_id, CalendarHelper.load_calendars(current_user[:id]), include_blank:true %>
     </div>
 
-    <%= link_to "Create a New Course", new_course_path %>
+    <%= link_to "Create a New Calendar", new_calendar_path %>
     <br><br>
 
     <div class="input-group input-group-sm mb-3">
