--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,16 +1,63 @@
-<div class="center jumbotron">
-<section align="center">
-  <h1>Welcome to the Brandeis Class Hub</h1>
-</section>
+<div class="container">
+  <div class="row">
+
+      <div class="column intro-container">
+        <div class="row slogan"><p>Welcome to Brandeis Class Hub</p></div>
+          <div class="row intro">
+            <p class="highlight">
+            A digital platform that allows you to create as many as calendars as you want to save your course work, your assignments, your personal events and of course, holidays, as we have so many Brandeis Holidays to remember. 
+            </p>
+            <p class="highlight">
+            Say bye to the cumbersome Google calendar! Try set up your next semester's calendar by uploading the workday file using Brandeis Class Hub, one click and you are ready to go. 
+            </p>
+            <p class="highlight">
+            Set your calendars public, so every one can search and subscribe. Or set them private, and share with your closest friends using tokens. 
+            </p>
+          </div>
+          <%# <div class="row"><%= link_to image_tag("branCH.png", alt: "logo", width: "200") %>
+          <button class="row button-55"><%= link_to "Get Started Here", home_calendar_path %></button>
+        </div>
+      </div>
+
+      <div class="column landing-carousel">
+        <div class="row">
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#myCarousel" data-slide-to="1"></li>
+              <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+          <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+              <div class="item active">
+                <%= link_to image_tag("info1.png", alt: "calendar view", width: "1000") %>
+              </div>
+
+              <div class="item">
+                <%= link_to image_tag("info2.png", alt: "calednar details", width: "1000") %>
+              </div>
+
+              <div class="item">
+                <%= link_to image_tag("info3.png", alt: "subscribe", width: "1000") %>
+              </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
 </div>
-<section align="center" style="padding-bottom: 100px">
-<%= link_to image_tag("branCH.png", alt: "logo", width: "200") %> 
-</section>
 
-<section align="center">
-<%# <%= link_to "Sign up", "#", class: "btn btn-lg btn-primary" %>
-<%# <%= link_to "Log in", "#", class: "btn btn-lg btn-primary" %> 
-<%= link_to "Calender View", home_calendar_path, class: "btn btn-lg btn-primary" %>
-</section>
 
