--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -6,7 +6,7 @@
 
         <ul>
           <% assignment.errors.each do |error| %>
-            <li><%= error.full_message %></li>
+            <li id="error_reason"><%= error.full_message %></li>
           <% end %>
         </ul>
       </div>
