--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -58,6 +58,12 @@
       </div>
     </div>
 
+<% if Current.user %>
+  Signed in as <%= current_user.name %>!
+  <%= link_to "Sign out", signout_path %>
+<% else %>
+  <%= link_to "Sign in with Twitter", "/auth/google_oauth2" %>
+<% end %>
 </div>
 
 
