--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,30 +1,23 @@
 
 <div class="container event-box" align="center">
   <% provide(:title, 'Sign up') %>
-  <h1>Sign up</h1>
-
+  <h3>Sign up for your account</h3>
+  <br>
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <%= form_with(model: @user) do |f| %>
         <%= render 'shared/error_messages' %>
-        
-        <%= f.label :first_name %>
-        <%= f.text_field :first_name, class: 'form-control' %>
-
-        <%= f.label :last_name %>
-        <%= f.text_field :last_name, class: 'form-control' %>
-
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form-control' %>
-
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form-control' %>
-
-        <%= f.label :password_confirmation, "Confirm Password" %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-        <%= f.submit "Create my account", class: "btn btn-primary" %>
+        <%= f.text_field :first_name, class: 'form-control', placeholder: "Enter first name" %>
+        <%= f.text_field :last_name, class: 'form-control', placeholder: "Enter last name"%>
+        <%= f.email_field :email, class: 'form-control', placeholder: "Enter email" %>
+        <%= f.password_field :password, class: 'form-control', placeholder: "Enter password" %>
+        <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Confirm password" %>
+        <%= f.submit "Create account", class: "btn btn-primary" %>
       <% end %>
+      <p>OR</p>
+       <%= link_to image_tag("google_sign_in_2.png", width: "175"), "/auth/google_oauth2" %>
+       <hr>
+      <%= link_to "Already have an account? Log In", login_path%>
     </div>
   </div>
   <br>
