--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,12 +29,12 @@
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :password, style: "display: block" %>
-      <%= form.text_field :password %>
+      <%= form.password_field :password %>
     </div>
 
     <div class="input-group input-group-sm mb-3">
       <%= form.label :password_confirmation, style: "display: block" %>
-      <%= form.text_field :password_confirmation %>
+      <%= form.password_field :password_confirmation %>
     </div>
 
     <br>
