--- a/app/views/other_events/index.html.erb
+++ b/app/views/other_events/index.html.erb
@@ -6,7 +6,7 @@
   <% @other_events.each do |other_event| %>
     <%= render other_event %>
     <p>
-      <%= link_to "Show this other event", other_event %>
+      <%= link_to "Show this event", calendar_other_events_path %>
     </p>
   <% end %>
 </div>
