--- a/app/views/other_events/_form.html.erb
+++ b/app/views/other_events/_form.html.erb
@@ -1,9 +1,7 @@
 <div class="container event-box" align="center">
-<%= form_with(model: other_event) do |form| %>
+  <%= form_with(model: other_event) do |form| %>
     <% if other_event.errors.any? %>
       <div style="color: red">
-        <h2><%= pluralize(other_event.errors.count, "error") %> prohibited this other_event from being saved:</h2>
-
         <ul>
           <% other_event.errors.each do |error| %>
             <li><%= error.full_message %></li>
@@ -21,12 +19,12 @@
     <br><br>
 
     <div class="input-group input-group-sm mb-3">
-      <span class='input-group-text'>Name</span>
+      <%= form.label :other_event_name, style: "display: block" %>
       <%= form.text_field :name %>
     </div>
 
-    <div class="input-group input-group-sm mb-3>
-      <%= form.label :date %>
+    <div class="input-group input-group-sm mb-3">
+      <%= form.label :date, style: "display: block" %>
       <%= form.date_field :date %>
     </div>
 
