--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -70,7 +70,7 @@
             <td scope="row"><%= course.name %></td>
             <td scope="row"><%= course.start_date.to_s + " - " + course.end_date.to_s %></td>
             <td scope="row"><%= course.professor_name %></td>
-            <td scope="row"><%= link_to "Show this course", course %> <td>
+            <td scope="row"><%= link_to "Show this course", calendar_course_path(Calendar.find_by(id: course.calendar_id).invite_token, course.slug) %> <td>
           </tr>
         <% end %>
       </tbody>
