--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -16,18 +16,20 @@
 
 <div>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
-    <%= link_to "Edit", edit_class_period_path(@class_period), class:"btn btn-sm btn-primary" %> |
+    <%= link_to "Edit", edit_calendar_course_class_period_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
+          Course.find_by(id: @class_period.course_id).slug), class:"btn btn-sm btn-primary" %> |
   <%end%>
   <%= link_to "Back", home_calendar_path(date: params[:date], view: :month), class:"btn btn-sm btn-primary"%>
   <br>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-      <%= link_to "Edit all class information", edit_course_path(@class_period.course_id),class:"btn btn-sm btn-primary" %>
+      <%= link_to "Edit all class information", edit_calendar_course_path(Calendar.find_by(id: @class_period.calendar_id).invite_token, 
+       Course.find_by(id: @class_period.course_id).slug),class:"btn btn-sm btn-primary" %>
     </div>
   <% end %>
   <% if Calendar.find_by(id: @class_period.calendar_id).user_id == Current.user.id%>
     <div class="delete-button">
-      <%= button_to "Delete this class", @class_period, method: :delete, class:"btn btn-sm btn-primary" %>
+         <%= button_to  "Delete this class", calendar_course_class_period_path, method: :delete, class:"btn btn-sm btn-primary" %>
     </div>
   <%end%>  
 </div>
