delete unessary url

--- a/app/views/other_events/new.html.erb
+++ b/app/views/other_events/new.html.erb
@@ -1,9 +1,2 @@
-<h1>New other event</h1>
-
+<h1>New Event</h1>
 <%= render "form", other_event: @other_event %>
-
-<br>
-
-<div>
-  <%= link_to "Back to other events", other_events_path %>
-</div>
