--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -1,10 +1,2 @@
-<h1>Editing calendar</h1>
-
+<h1>Edit Calendar Information</h1>
 <%= render "form", calendar: @calendar %>
-
-<br>
-
-<div>
-  <%= link_to "Show this calendar", @calendar , class:"btn btn-sm btn-primary" %> |
-  <%= link_to "Back to Calendar View", home_calendar_path, class:"btn btn-sm btn-primary" %>
-</div>
