--- a/app/views/user_calendars/edit.html.erb
+++ b/app/views/user_calendars/edit.html.erb
@@ -1,10 +1,5 @@
-<h1>Editing user calendar</h1>
+<h1>Edit User calendar</h1>
 
 <%= render "form", user_calendar: @user_calendar %>
 
 <br>
-
-<div>
-  <%= link_to "Show this user calendar", @user_calendar %> |
-  <%= link_to "Back to user calendars", user_calendars_path %>
-</div>
