--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,6 +21,7 @@
             <ul id="dropdown-menu" class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Calendars", calendars_url %></li>
+              <li><%= link_to "Events", total_events_url %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to "Log out", logout_path,
